<resources>
    <string name="app_name">Buku_Tugas_Budi</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="button_5">Button 5</string>
    <string name="button_6">Button 6</string>
    <string name="button_7">Button 7</string>
    <string name="button_8">Button 8</string>
    <string name="button_9">Button 9</string>
    <string name="button_10">Button 10</string>
    <string name="biodata_diri">Biodata Diri</string>
    <string name="nama">Nama</string>
    <string name="nim">NIM</string>
    <string name="email">Email</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="hima">HIMA</string>
    <string name="bem">BEM</string>
    <string name="imm">IMM</string>
    <string name="todo">TODO</string>
    <string name="submit">SUBMIT</string>
    <string name="waktu">Waktu</string>
    <string name="tanggallahir">TanggalLahir</string>
</resources>